home tile commit

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 languageCode : zh-cn
-title : My New Hugo Site
+title : Young Bai
 theme : PaperMod
 publishDir : docs
 menu:
@@ -12,7 +12,3 @@ menu:
       name: tags
       url: /tags/
       weight: 20
-    - identifier: example
-      name: example.org
-      url: https://example.org
-      weight: 30
